Leverage Stream.toList().